--- a/Panels/Load-External-file/index.html
+++ b/Panels/Load-External-file/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>Load an External Panel</title>
-        <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css" />
-        <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
+        <link rel="stylesheet" href="../libz/jquery.mobile-1.4.4.min.css" />
+        <script src="../libz/jquery-1.11.1.min.js"></script>
+        <script src="../libz/jquery.mobile-1.4.4.min.js"></script>
         <script src="code.js"></script>
     </head>
     <body>
