--- a/events/load-events/index.html
+++ b/events/load-events/index.html
@@ -3,8 +3,8 @@
 <head>
     <title>Load Events</title>
     <link rel="stylesheet" href="../../assets/jquery.mobile-1.4.4.min.css" />
-    <script src="../../../assets/jquery-1.11.1.min.js"></script>
-    <script src="../../../assets/jquery.mobile-1.4.4.min.js"></script>
+    <script src="../../assets/jquery-1.11.1.min.js"></script>
+    <script src="../../assets/jquery.mobile-1.4.4.min.js"></script>
     <script src="code.js"></script>
 </head>
 
