--- a/events/load-events/index.html
+++ b/events/load-events/index.html
@@ -15,10 +15,10 @@
             <h1>Header</h1>
 
         </div>
-        <div data-role="content" class="ui-content"> <a href="http://jsfiddle.net/Palestinian/epg47/show" class="ui-btn ui-btn-icon-right ui-icon-check">Link</a>
+        <div data-role="content" class="ui-content"> <a href="external-page.html" class="ui-btn ui-btn-icon-right ui-icon-check">Link</a>
             <a href="#" class="ui-btn ui-btn-icon-right ui-icon-check" id="foo">Change page</a>
             <a href="#" class="ui-btn ui-btn-icon-right ui-icon-check" id="bar">Load page</a>
-            <a href="http://jsfiddle.net/Palestinian/epg4712/show" class="ui-btn ui-btn-b ui-btn-icon-right ui-icon-delete">Broken link</a>
+            <a href="nothing.html" class="ui-btn ui-btn-b ui-btn-icon-right ui-icon-delete">Broken link</a>
 
         </div>
         <div data-role="footer" class="footer" id="footer" data-position="fixed">
