--- a/Infinite-Scroll/index.html
+++ b/Infinite-Scroll/index.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>Infinite Scroll</title>
-    <link rel="stylesheet" href="../../assets/jquery.mobile-1.4.4.min.css" />
-    <script src="../../assets/jquery-1.11.1.min.js"></script>
-    <script src="../../assets/jquery.mobile-1.4.4.min.js"></script>
+    <link rel="stylesheet" href="../assets/jquery.mobile-1.4.4.min.css" />
+    <script src="../assets/jquery-1.11.1.min.js"></script>
+    <script src="../assets/jquery.mobile-1.4.4.min.js"></script>
     <script src="code.js"></script>
 </head>
 
